# hdb-resale-prices

./: .gitignore  .pre-commit-config.yaml  README.md  data.csv  data.py  pyproject.toml  requirements.txt  script.py  👋_Welcome.py  😄_Welcome.py
.github/workflows/: etl.yaml
data/: 2017-01.csv  2017-02.csv  2017-03.csv  2017-04.csv  2017-05.csv  2017-06.csv  2017-07.csv  2017-08.csv  2017-09.csv  2017-10.csv  2017-11.csv  2017-12.csv  2018-01.csv  2018-02.csv  2018-03.csv  2018-04.csv  2018-05.csv  2018-06.csv  2018-07.csv  2018-08.csv  2018-09.csv  2018-10.csv  2018-11.csv  2018-12.csv  2019-01.csv  2019-02.csv  2019-03.csv  2019-04.csv  2019-05.csv  2019-06.csv  2019-07.csv  2019-08.csv  2019-09.csv  2019-10.csv  2019-11.csv  2019-12.csv  2020-01.csv  2020-02.csv  2020-03.csv  2020-04.csv  (+56 more)
pages/: 2 🏠_Overview.py  2 📊_Distribution of Town.py  2💲_Highest_Resale_Price.py  3 📅_Remaining Lease.py  3 📊_Distribution of Resale Price.py  3💲_Highest_Resale_Price.py  4 📈_Price_Trend.py  4 🔍_Town_Analysis.py  5 📅_Remaining Lease.py  5 🔍_Town_Analysis.py  6 📈_Price_Trend.py  6💲_Highest_Resale_Price.py
scripts/: convert.py  extract.py
webapp/: 0_👋_Welcome.py  0_📈_Median_Resale_Prices.py  0_🔑_HDB_Kaki.py  convert.py  etl.py  extract.py  filter.py  logo.py  read.py  utils.py
webapp/logo/: __init__.py  icon.py
webapp/pages/: 0_📈_Median_Resale_Prices.py  1 📊_Distribution of Town.py  2 📊_Distribution of Town.py  2📅_Remaining Lease.py  3 🔍_Town_Analysis.py  4 📈_Price_Trend.py  4 🔍_Town_Analysis.py  4💲_Highest_Resale_Price.py  5 📈_Price_Trend.py  5💲_Highest_Resale_Price.py
webapp/update/: convert.py  etl.py  extract.py
