[tool.poetry]
name = "hdb-resale-prices"
version = "0.1.0"
description = ""
authors = ["Benjamin Dornel <benjamindornel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.38.0"
folium = "^0.17.0"
altair = "^5.4.1"
streamlit-folium = "^0.22.0"
seaborn = "^0.13.2"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
