[tool.poetry]
name = "hdb-resale-prices"
packages = [
    {include = "webapp"}
]
version = "0.1.0"
description = ""
authors = ["Benjamin Dornel <benjamindornel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
streamlit = "^1.38.0"
folium = "^0.17.0"
altair = "^5.4.1"
streamlit-folium = "^0.22.0"
seaborn = "^0.13.2"
tqdm = "^4.66.5"
polars = "^1.7.1"
plotly = "^5.24.1"
python-dateutil = "^2.9.0.post0"
pybadges = {git = "https://github.com/benjamin-awd/pybadges"}
setuptools = "^75.1.0"
streamlit-searchbox = "^0.1.17"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
pylint = "^3.1.0"

[tool.poetry.scripts]
extract = "webapp.extract:extract"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
